dataset1235/2025-2/610742602/users/4180041627/executions/677928262_775838323.log
== RUN (2025-08-28 02:09:57)
-- CODE: 
n1= 5
n= 4
n= 3

m= (n1 + n2 + n3)/3

print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    m= (n1 + n2 + n3)/3
             ^^
NameError: name 'n2' is not defined. Did you mean: 'n1'?
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    m= (n1 + n2 + n3)/3
             ^^
NameError: name 'n2' is not defined. Did you mean: 'n1'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 02:10:18)
-- CODE: 
n1= 5
n= 4
n= 3

m= (N1 + N2 + N3)/3

print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    m= (N1 + N2 + N3)/3
        ^^
NameError: name 'N1' is not defined. Did you mean: 'n1'?
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    m= (N1 + N2 + N3)/3
        ^^
NameError: name 'N1' is not defined. Did you mean: 'n1'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 02:11:13)
-- CODE: 
n1= 5
n2= 4
n3= 3

m= (n1 + n2 + n3)/3

print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 02:09:30)
-- CODE: 
n1= 5
n= 4
n= 3

m= (n1+ n2 + n3)/3

print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    m= (n1+ n2 + n3)/3
            ^^
NameError: name 'n2' is not defined. Did you mean: 'n1'?
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    m= (n1+ n2 + n3)/3
            ^^
NameError: name 'n2' is not defined. Did you mean: 'n1'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 02:11:06)
-- CODE: 
n1= 5
n2= 4
n3= 3

m= (n1 + n2 + n3)/3

print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
